# compsoc-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  go.mod  go.sum
cmd/httpd/: main.go
internal/app/: app.go  routes.go
internal/database/: admin.go  db.go  event.go  member.go  person.go  storer.go  user.go
internal/decorators/: auth.go  decorator.go
internal/handlers/: event_handler.go  file_handler.go  guild_handler.go  member_handler.go  person_handler.go  ping_handler.go  scraper_handler.go  student_handlers.go  user_handler.go
internal/middleware/: middleware.go
internal/models/: admin.go  date.go  event.go  file.go  guild.go  member.go  person.go  student.go  time.go  user.go
internal/router/: methods.go  router.go  routes.go
internal/web/: response.go  scraper.go
pkg/file/: text.go
pkg/util/: errors.go  logger.go
sql/: init.sql
src/: app.rs  database.rs  fetch.rs  filters.rs  handlers.rs  main.rs  models.rs  schema.rs
