[package]
name = "compsoc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["default", "blocking", "cookies", "json", "socks"] }
dotenvy = "0.15"
env_logger = "0.10.0"
warp = "0.3.5"
log = "0.4.19"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
